# spinx-contract

./: .env  .env.example  .gitignore  Anchor.toml  README-create-coinflip.md  README-join-coinflip.md  README.md  create-coinflip.ts  env.example  join-coinflip.ts  package-create-coinflip.json  package-join-coinflip.json  package.json
client/: client.ts
programs/spinx/: Cargo.toml
programs/spinx-contract/: Cargo.toml
programs/spinx-contract/src/: account.rs  error.rs  lib.rs  misc.rs  state.rs  utils.rs
programs/spinx/src/: account.rs  error.rs  lib.rs  utils.rs
scripts/: create-coinflip.ts  join-coinflip.ts
tests/: anchor.ts  spinx-contract.ts
